--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,9 @@ addons:
     - libevent-dev
 before_install: [pip install --user codecov, dub fetch packageversion]
 script:
-- dub test --compiler=${DC} --coverage
-- dub build --compiler=${DC} --build=ddox
+  - dub build --compiler=${DC}
+  - dub test --compiler=${DC} --coverage
+  - dub build --compiler=${DC} --build=ddox
 after_success: codecov
 deploy:
   provider: pages
