--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ addons:
   apt:
     packages:
     - libevent-dev
-before_install: [pip install --user codecov]
+before_install: pip install --user codecov
 script:
   - dub build --compiler=${DC}
   - dub test --compiler=${DC} --coverage
