--- a/.travis.yml
+++ b/.travis.yml
@@ -8,10 +8,7 @@ addons:
     packages:
     - libevent-dev
 before_install: pip install --user codecov
-script:
-  - dub build --compiler=${DC}
-  - dub test --compiler=${DC} --coverage
-  - dub build --compiler=${DC} --build=ddox
+script: dub build --compiler=${DC} && dub test --compiler=${DC} --coverage -- -s -t -d && dub build --compiler=${DC} --build=ddox
 after_success: codecov
 deploy:
   provider: pages
